# PARIInterface

./: .gitignore  .travis.yml  COPYRIGHT.md  Makefile.am  Makefile.in  PackageInfo.g  README.md  TODO.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
gap/: PARIInterface.gd  PARIInterface.gi
scripts/: build_pari.sh  parse_pari_desc.g
src/: PARIInterface.c
tst/: basic.tst  testall.g
